--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,20 @@
 version: "3"
 services:
-  web:
+  python-application:
     build:
-      context: '.'
-      dockerfile: ./Dockerfile
+      context: ./prometheus/python-application
+    container_name: python-application
+    image: python-application
     ports:
-      - 8080:8080
-    volumes:
-      - .:/code
+      - "8081:5000"
+
+  nodejs-application:
+    build:
+      context: ./prometheus/nodejs-application
+    container_name: nodejs-application
+    image: nodejs-application
+    ports:
+      - "8083:5000"
 
   prometheus:
     image: prom/prometheus
